# brog

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  LICENSE  README.md  SECURITY.md  cliff.toml  codecov.yml  flake.nix  install.sh  publish.sh  typos.toml
.github/workflows/: build-test.yaml  doc.yaml  flakehub-publish-tagged.yml  flakehub.yaml  release.yaml  tag-release.yaml
docs/: book.yaml
docs/src/: SUMMARY.md
mocks/: bootc
mocks/error/: bootc
samples/: brog-bad.yaml  brog-extended.yaml  brog.container  brog.service  brog.yaml  clos.yaml
src/: lib.rs  main.rs  sign.rs
tests/: integration.rs
