[package]
name = "brog"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
dotenv = "0.15.0"
dotenvy = "0.15.7"
error-chain = "0.12"
hmac = "0.12.1"
hex = "0.4"
reqwest = "0.12.9"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
tokio = { version = "1.17.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
] }
tokio-cron-scheduler = { version = "0.13.0", features = ["english"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
url = "2.5.4"
urlencoding = "2.1.3"

[dev-dependencies]
wiremock = "0.6.2"
