[package]
name = "brog"
version = "4.0.1"
edition = "2021"
authors = ["Anton Whalley <anton@mehal.tech>"]
license = "MIT"
rust-version = "1.60"
description = "A client for managing bootc updates"
repository = "https://github.com/mehal-tech/brog"
homepage = "https://github.com/mehal-tech/brog"
readme = "README.md"
documentation = "https://docs.rs/brog"
keywords = ["brog", "mehal", "authentication", "signature", "web"]
categories = [
    "authentication",
    "web-programming",
    "web-programming::http-client",
]

[dependencies]
dotenvy = { git = "https://github.com/allan2/dotenvy.git", features = [
    "macros",
] }
anyhow = "1.0.93"
chrono = "0.4.38"
error-chain = "0.12"
hmac = "0.12.1"
hex = "0.4"
reqwest = "0.12.9"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
tokio = { version = "1.17.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
] }
tokio-cron-scheduler = { version = "0.13.0", features = ["english"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
url = "2.5.4"
urlencoding = "2.1.3"
messagesign = "7.0.2"
rand = "0.9.0"

[dev-dependencies]
wiremock = "0.6.2"
